Apply feedback from PR from Tim